--- a/starview_frontend/src/components/explore/ExploreMap/styles.css
+++ b/starview_frontend/src/components/explore/ExploreMap/styles.css
@@ -11,6 +11,8 @@
 .explore-map__container {
   width: 100%;
   height: 100%;
+  /* Dark background prevents flash while map loads */
+  background: #0a0a0f;
 }
 
 /* Loading Overlay */
